# nand2tetris

./: .gitignore  Cargo.toml  README.md
projects/1/: And.hdl  And16.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
projects/2/: ALU.hdl  Add16.hdl  FullAdder.hdl  HalfAdder.hdl  Inc16.hdl
projects/3/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl  Register.hdl
projects/3/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
projects/4/fill/: Fill.asm
projects/4/mult/: Mult.asm
projects/5/: CPU.hdl  Computer.hdl  Memory.hdl
projects/6/: test.sh
projects/6/has/: Cargo.toml
projects/6/has/src/: main.rs  parser.rs  spec.rs  symboltable.rs  to_binary.rs
projects/7/: hand_code_pop_local_2.asm  hand_code_stuff.asm  prep.md  test.sh
projects/7/handcode/: and.asm  eq.asm  gt.asm  lt.asm  neg.asm  or.asm  pop_local_2.asm  push_local_2.asm  sub.asm
projects/7/vmt/src/: asmwriter.rs  main.rs  parser.rs  phrases.rs  spec.rs
projects/8/: test.sh
projects/8/handcode/: if-goto.txt
