[package]
name = "nand2tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }

[[bin]]
name = "has"
path = "projects/6/has/src/main.rs"

[[bin]]
name = "vmt"
path = "projects/7/vmt/src/main.rs"
